# anime_dataset_generator

./: .dockerignore  .gitignore  Dockerfile.bbdd_maker  Dockerfile.flet_runner  Dockerfile.uvicorn_server  LICENSE  README.md  bbdd.sql  compose.yml  cronjobs  datos_limpios.csv  datos_limpios.xlsx  example.env  file.json  full_profile.json  high_rating_data.xlsx  init.sql  maze.py  posible_recuperacion.py  processed_data.xlsx  pyproject.toml  raw_data.xlsx  requeriments-bbdd_maker.txt  requeriments-flet_runner.txt  requeriments-uvicorn_server.txt  start_server.py
FINAL/: anime_service.py  database.py  details_service.py  main.py  score_service.py  train.py  user_service.py
OUTRO/: user_score_dataset.py
genetic_rule_miner/: config.py  main.py
genetic_rule_miner/app/: app.py  backend.py
genetic_rule_miner/app/components/: top_app_bar.py
genetic_rule_miner/app/utils/: theme.py
genetic_rule_miner/app/views/: user_profile_view.py
genetic_rule_miner/bbdd_maker/: anime_service.py  details_service.py  main.py  score_service.py  user_service.py
genetic_rule_miner/data/: database.py  manager.py  preprocessing.py
genetic_rule_miner/models/: genetic.py
genetic_rule_miner/utils/: logging.py  nltk_aux.py
project/: .gitignore  datos_limpios.csv  maker.py  pyproject.toml
project/genetic_rule_miner/: config.py  main.py
project/genetic_rule_miner/app/: backend.py
project/genetic_rule_miner/bbdd_maker/: anime_service.py  config.py  details_service.py  main.py  score_service.py  user_service.py
project/genetic_rule_miner/data/: database.py  manager.py  (+1 more)
(+9 files in other folders)
